added product-name to the style.css file
newly added .product-name h3 and .product-name p
align texts to center when the screen size is small

--- a/style.css
+++ b/style.css
@@ -123,4 +123,10 @@
     footer h6 {
         margin-left: 20px;
     }
+    .product-name h3 {
+        text-align: center;
+    }
+    .product-name p {
+        text-align: center;
+    }
 }
