--- a/style.css
+++ b/style.css
@@ -60,7 +60,6 @@
     text-align: center;
     margin-top: 6%;
 }
-
 #qty {
     width: 40px;
     text-align: center;
@@ -68,7 +67,6 @@
 .btn-qty {
     border-radius: 100%;
 }
-
 
 /* large screen size */
 @media  only screen and (min-width: 992px) {
@@ -123,12 +121,10 @@
     .radius{
         border-radius: 10px;
     }
-
     .purchase-pdct-img{
         overflow: hidden;
         height: 450px;
     }
-
     
 }
 
@@ -245,5 +241,21 @@
     .reg .input-group-text {
         border-color: #e22bab;
         border-style: solid;
+    }
+    .xs-margin{
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 10px;
+    }
+    .purchase-pdct-img{
+        overflow: hidden;
+        height: 450px;
+    }
+    .xs-margin h4 {
+        margin-top: 20px;
+        margin-bottom: 10px;
+    }
+    .btn-block {
+        margin-top: 20px;
     }
 }
